Update form with table.html
for the sample to view

--- a/forms/form with table.html
+++ b/forms/form with table.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>  <form action="http://127.0.0.1:5500/forms/login.html" >
+<body>  
+    <h1>Edited in github sample</h1>
+    <form action="http://127.0.0.1:5500/forms/login.html" >
             <table height="50px" width="550" cellpadding="1" cellspace="0" border="1px" >
                     <tr >
                         <td colspan="2" ><center><b>Fill the form below</center></b></td>
@@ -46,4 +48,5 @@
         </form>
     
 </body>
+
 </html>
